syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "ProductShop";

package product;

service Product {
	rpc SaveProduct(ProductRequest) returns (ProductResponse);
	rpc GetProducts(google.protobuf.Empty) returns (ListProducts);
	rpc UpdateProduct(ProductToUpdate) returns (ProductResponse);
	rpc DeleteProduct(ProductId) returns (ProductResponse);
}

message ProductRequest {
	string name = 1;
	double price = 2;
	int32 categoryId = 3;
}

message ProductResponse {
	bool isSuccess = 1;
}
message ProductId{
	int32 productId = 1;
}
message ProductToUpdate {
	int32 id = 1;
	string name = 2;
	double price = 3;
	int32 categoryId = 4;
}

message ListProducts{
	repeated ProductRequest products = 1;
}